// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should render correctly 1`] = `
"<div class=\\"tabs \\"><header class=\\"\\"><div class=\\"tab  \\" role=\\"button\\">label1</div><div class=\\"tab  \\" role=\\"button\\">label2</div></header><div class=\\"content\\"></div><style>
          .tabs {
            width: initial;
            overflow: auto;
          }

          header {
            display: flex;
            flex-wrap: nowrap;
            align-items: center;
            border-bottom: 1px solid #eaeaea;
            overflow: scroll;
            scrollbar-width: none;
          }

          header::-webkit-scrollbar {
            display: none;
          }

          .hide-divider {
            border-bottom: none;
          }

          .content {
            padding-top: 0.625rem;
          }

          .tab {
            padding: 4pt calc(0.65 * 4pt);
            cursor: pointer;
            outline: 0;
            transition: all 200ms ease;
            text-transform: capitalize;
            font-size: 1rem;
            white-space: nowrap;
            margin: 0 calc(0.8 * 8pt);
            color: #444;
            user-select: none;
            display: flex;
            align-items: center;
            line-height: 1.25rem;
            position: relative;
          }

          .tab:after {
            position: absolute;
            content: '';
            bottom: -1px;
            left: 0;
            right: 0;
            width: 100%;
            height: 2px;
            transform: scaleX(0.75);
            background-color: transparent;
            transition: all 200ms ease;
          }

          .tab.active:after {
            background-color: #000;
            transform: scaleX(1);
          }

          .tab :global(svg) {
            max-height: 1em;
            margin-right: 5px;
          }

          .tab:first-of-type {
            margin-left: 0;
          }

          .tab.active {
            color: #000;
          }

          .tab.disabled {
            color: #999;
            cursor: not-allowed;
          }
        </style></div>"
`;

exports[`Tabs should work correctly with different styles 1`] = `
"<div class=\\"tabs \\"><header class=\\"hide-divider\\"><div class=\\"tab  \\" role=\\"button\\">label1</div></header><div class=\\"content\\"></div><style>
          .tabs {
            width: initial;
            overflow: auto;
          }

          header {
            display: flex;
            flex-wrap: nowrap;
            align-items: center;
            border-bottom: 1px solid #eaeaea;
            overflow: scroll;
            scrollbar-width: none;
          }

          header::-webkit-scrollbar {
            display: none;
          }

          .hide-divider {
            border-bottom: none;
          }

          .content {
            padding-top: 0.625rem;
          }

          .tab {
            padding: 4pt calc(0.65 * 4pt);
            cursor: pointer;
            outline: 0;
            transition: all 200ms ease;
            text-transform: capitalize;
            font-size: 1rem;
            white-space: nowrap;
            margin: 0 calc(0.8 * 8pt);
            color: #444;
            user-select: none;
            display: flex;
            align-items: center;
            line-height: 1.25rem;
            position: relative;
          }

          .tab:after {
            position: absolute;
            content: '';
            bottom: -1px;
            left: 0;
            right: 0;
            width: 100%;
            height: 2px;
            transform: scaleX(0.75);
            background-color: transparent;
            transition: all 200ms ease;
          }

          .tab.active:after {
            background-color: #000;
            transform: scaleX(1);
          }

          .tab :global(svg) {
            max-height: 1em;
            margin-right: 5px;
          }

          .tab:first-of-type {
            margin-left: 0;
          }

          .tab.active {
            color: #000;
          }

          .tab.disabled {
            color: #999;
            cursor: not-allowed;
          }
        </style></div>"
`;
